recolouring headings and fixing the visibility of last row

--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@
     --card-shadow: rgba(0, 0, 0, 0.3);
     --card-hover-shadow: rgba(0, 0, 0, 0.4);
     --content-text: #ffffff;
-    --heading-color: #315cca;
+    --heading-color: #cccccc;
     --addbutton-bg:#000000;
     --type-fontcolor:#000000;
     --team-panel:#1e1e1e;
